--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,5 +1,9 @@
-.navbar {
+/* .navbar {
   background-color: black;
+} */
+
+header.header {
+  position: relative;
 }
 
 .bg-col-logo {
@@ -14,7 +18,7 @@
 
 .logIn-col {
   color: #343434;
-  right: 2% !important;
+  /* right: 2% !important; */
 }
 
 .logIn-div {
@@ -26,7 +30,12 @@
 .nav-link {
   color: #999;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1rem;
+}
+@media (max-width: 600px) {
+  .nav-link {
+    font-size: 0.8rem;
+  }
 }
 
 .nav-link:hover {
@@ -55,26 +64,12 @@
   background-color: #dee2e6;
 }
 
-.toogle-container {
-  background-image: url(../../assets/star-wars-background-img.jpg) !important;
-}
-#basic-navbar-nav {
-  background-image: url(../../assets/star-wars-background-img.jpg) !important;
-}
-
 .login-nav-link {
   white-space: nowrap;
 }
 
 @media (max-width: 575px) {
   .logIn-col {
-    top: 2.5% !important;
-    right: 8% !important;
-  }
-}
-
-@media screen and (min-width: 575px) and (max-width: 1024px) {
-  .logIn-col {
-    right: 5% !important;
+    right: 0%;
   }
 }
