--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,7 +2,6 @@ header.header {
   position: relative;
 }
 
-
 @media (max-width: 500px) {
   .logo-img {
     width: 180px;
@@ -14,7 +13,6 @@ header.header {
     padding: 0.1rem 0.4rem;
   }
 }
-
 
 .navbar-link {
   margin: 0;
@@ -86,6 +84,31 @@ header.header {
 /* } */
 
 .navbar-container-box {
+  width: min(90vw, 1100px) !important;
   display: grid !important;
   grid-template-columns: 1fr 2fr 1fr;
+}
+
+.navbar-collapese-box {
+  margin-inline-start: auto;
+}
+
+@media (min-width: 768px) {
+  .navbar-collapese-box {
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+  }
+}
+.border-wrapper {
+  margin-inline: auto;
+  width: min(90vw, 1100px);
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
+}
+
+.border-right {
+  border-right: 2px solid var(--bs-link-color);
+}
+.border-left {
+  border-left: 2px solid var(--bs-link-color);
 }
