refactor People component and images added + styles improvements

--- a/src/pages/Characters/character-card.css
+++ b/src/pages/Characters/character-card.css
@@ -2,7 +2,7 @@
   max-width: 50%;
 } */
 
-.row {
+/* .row {
   --bs-gutter-x: 0 !important;
 }
 div.spaceship-img-container {
@@ -75,4 +75,4 @@ span.people-films-span {
   .container {
     max-width: 50%;
   }
-}
+} */
