--- a/src/pages/Starships/Starships.css
+++ b/src/pages/Starships/Starships.css
@@ -1,8 +1,9 @@
 .shipsGrid {
   margin-inline: auto;
-  width: min(90vw, 1100px);
+  max-width: min(90vw, 1100px);
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
+  grid-auto-rows: 50vh;
   gap: 2rem;
 }
 
@@ -34,11 +35,11 @@
   overflow: hidden;
   /* min-height: 40vh; */
 }
-@media (max-width: 576px) {
+/* @media (max-width: 576px) {
   .starship-card {
     height: 30vh;
   }
-}
+} */
 
 .card-hero-img {
   width: 100%;
