--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,8 @@ body {
   font-family: 'Orbitron', sans-serif;
   letter-spacing: 1px;
 }
+
+.main-wrapper {
+  margin-inline: auto;
+  width: min(90vw, 1100px);
+}
