--- a/src/pages/grid-styles.css
+++ b/src/pages/grid-styles.css
@@ -1,4 +1,4 @@
-.shipsGrid {
+.elementsGrid {
   margin-inline: auto;
   max-width: min(90vw, 1100px);
   display: grid;
@@ -8,38 +8,40 @@
 }
 
 .card-hero {
-  height: 60%;
+  height: 70%;
   overflow: hidden;
+ 
 }
 .card-info {
-  height: 40%;
+  height: 30%;
   border-top: 2px solid #9e4f60;
+  background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
+  background-size: 7px;
+  background-repeat: repeat-x;
+  background-color: #282727;
 }
 
 .card-info h4 {
   font-size: 18px;
+  color: #ddd;
+  display: inline-block;
+  transition: color 275ms cubic-bezier(0.075, 0.82, 0.165, 1) ;
+  
 }
 .card-info h4:hover {
   cursor: pointer;
-  font-weight: 800;
-  color: white;
+  color: #9e4f60;
 }
 
 .card-info p {
   font-size: 14px;
 }
-.starship-card {
+.element-card {
   display: flex;
   flex-direction: column;
   border-radius: 5px;
   overflow: hidden;
-  /* min-height: 40vh; */
 }
-/* @media (max-width: 576px) {
-  .starship-card {
-    height: 30vh;
-  }
-} */
 
 .card-hero-img {
   width: 100%;
