--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -74,7 +74,6 @@
   right: 0%;
 }
 
-/* @media (min-width: 768px) { */
 .navbar-box {
   min-height: 110px;
   margin-block-start: auto !important;
@@ -84,7 +83,6 @@
   right: 50%;
   transform: translateX(50%);
 }
-/* } */
 
 .navbar-container-box {
   width: min(90vw, 1100px) !important;
@@ -106,7 +104,7 @@
 }
 .border-wrapper {
   margin-inline: auto;
-  width: min(90vw, 1100px);
+  width: 100%;
   border-top: 1px solid #333;
   border-bottom: 1px solid #333;
 }
