--- a/src/pages/grid-styles.css
+++ b/src/pages/grid-styles.css
@@ -6,10 +6,24 @@
   grid-auto-rows: 50vh;
   gap: 2rem;
 }
-
+.grid-element-card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  overflow: hidden;
+}
 .card-hero {
   height: 70%;
   overflow: hidden;
+}
+.card-hero-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.25s ease-in-out;
+}
+.card-hero-img:hover {
+  transform: scale(1.05);
 }
 .card-info {
   height: 30%;
@@ -18,7 +32,6 @@
   background-size: 7px;
   background-repeat: repeat-x;
 }
-
 .card-info h4 {
   font-size: 18px;
   color: #ddd;
@@ -29,23 +42,6 @@
   cursor: pointer;
   color: #9e4f60;
 }
-
 .card-info p {
   font-size: 14px;
-}
-.element-card {
-  display: flex;
-  flex-direction: column;
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-.card-hero-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.25s ease-in-out;
-}
-.card-hero-img:hover {
-  transform: scale(1.05);
 }
