--- a/src/pages/grid-styles.css
+++ b/src/pages/grid-styles.css
@@ -12,36 +12,36 @@
   border-radius: 5px;
   overflow: hidden;
 }
-.card-hero {
+.grid-card-hero {
   height: 70%;
   overflow: hidden;
 }
-.card-hero-img {
+.grid-card-hero-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   transition: transform 0.25s ease-in-out;
 }
-.card-hero-img:hover {
+.grid-card-hero-img:hover {
   transform: scale(1.05);
 }
-.card-info {
+.grid-card-info {
   height: 30%;
   border-top: 2px solid #9e4f60;
   background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
   background-size: 7px;
   background-repeat: repeat-x;
 }
-.card-info h4 {
+.grid-card-info h4 {
   font-size: 18px;
   color: #ddd;
   display: inline-block;
   transition: color 275ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-.card-info h4:hover {
+.grid-card-info h4:hover {
   cursor: pointer;
   color: #9e4f60;
 }
-.card-info p {
+.grid-card-info p {
   font-size: 14px;
 }
