--- a/src/pages/grid-styles.css
+++ b/src/pages/grid-styles.css
@@ -2,8 +2,8 @@
   margin-inline: auto;
   max-width: min(90vw, 1100px);
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
-  grid-auto-rows: 50vh;
+  grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
+  /* grid-auto-rows: 50vh; */
   gap: 2rem;
 }
 .grid-element-card {
@@ -12,6 +12,7 @@
   border-radius: 5px;
   overflow: hidden;
 }
+
 .grid-card-hero {
   height: 70%;
   overflow: hidden;
@@ -44,4 +45,23 @@
 }
 .grid-card-info p {
   font-size: 14px;
+}
+@media (max-width: 576px) {
+  .grid-container {
+    gap: 1rem;
+  }
+  .grid-element-card {
+    height: 20vh;
+    flex-direction: row;
+  }
+  .grid-card-hero {
+    height: 100%;
+    width: 35%;
+  }
+  .grid-card-info {
+    height: 100%;
+    border-left: 2px solid #9e4f60;
+    border-top: none;
+    width: 65%;
+  }
 }
