--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,9 @@
 }
 
 @media (max-width: 576px) {
+  .nav {
+    flex-wrap: nowrap;
+  }
   .nav-wrapper {
     width: 100%;
   }
@@ -21,7 +24,7 @@
   }
   .nav-link,
   .login-nav-link {
-    font-size: 0.8rem;
+    font-size: 0.75rem !important;
   }
 }
 
@@ -36,12 +39,6 @@
   font-weight: 600;
   font-size: 1rem;
 }
-/* @media (max-width: 576px) {
-  .nav-link,
-  .login-nav-link {
-    font-size: 0.8rem;
-  }
-} */
 
 .nav-link:hover {
   color: white;
