--- a/src/pages/grid-styles.css
+++ b/src/pages/grid-styles.css
@@ -2,8 +2,8 @@
   margin-inline: auto;
   max-width: min(90vw, 1100px);
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
-  /* grid-auto-rows: 50vh; */
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+
   gap: 2rem;
 }
 .grid-element-card {
@@ -11,6 +11,7 @@
   flex-direction: column;
   border-radius: 5px;
   overflow: hidden;
+  max-height: 33vh;
 }
 
 .grid-card-hero {
