--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,9 @@
 .header {
   position: relative;
 }
-.navbar-collapse-box {
+/* .navbar-collapse-box {
   padding-block: 3px;
-}
+} */
 
 .nav-wrapper {
   width: min(90vw, 1100px);
@@ -25,6 +25,16 @@
   .nav-link,
   .login-nav-link {
     font-size: 0.75rem !important;
+  }
+}
+
+@media (max-width:900px){
+  .login-nav-link {
+    font-size: 0.875em;
+    text-shadow: 0 1px 6px rgba(0,0,0,0.5);
+    font-weight: 700;
+    letter-spacing: 2px;
+    line-height: 1.375rem;
   }
 }
 
@@ -70,9 +80,16 @@
   right: 0%;
 }
 
+
 .navbar-box {
   min-height: 110px;
   margin-block-start: auto !important;
+}
+
+@media (max-width: 768px) {
+  .navbar-box {
+    min-height: 70px;
+  }
 }
 .navbar-brand-box {
   position: absolute;
@@ -105,3 +122,8 @@
   border-right: 1px solid #333;
   border-left: 1px solid #333;
 }
+
+/* .navbar-link {
+  background-image: url(https://res.cloudinary.com/dn9mr6kwc/image/upload/v1667039687/Starwars%20miniproject/sw_logo_mobile_q66vst.png);
+}  */
+
