--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,87 +1,86 @@
 .header {
-  position: relative;
+	position: relative;
 }
 /* .navbar-collapse-box {
   padding-block: 3px;
 } */
 
 .nav-wrapper {
-  width: min(90vw, 1100px);
+	width: min(90vw, 1100px);
 }
 
 @media (max-width: 576px) {
-  .nav {
-    flex-wrap: nowrap;
-  }
-  .nav-wrapper {
-    width: 100%;
-  }
-  .logo-img {
-    width: 180px;
-  }
-  .navbar-toggle-btn {
-    padding: 0.1rem 0.4rem;
-  }
-  .nav-link,
-  .login-nav-link {
-    font-size: 0.75rem !important;
-  }
+	.nav {
+		flex-wrap: nowrap;
+	}
+	.nav-wrapper {
+		width: 100%;
+	}
+	.logo-img {
+		width: 180px;
+	}
+	.navbar-toggle-btn {
+		padding: 0.1rem 0.4rem;
+	}
+	.nav-link,
+	.login-nav-link {
+		font-size: 0.75rem !important;
+	}
 }
 
-@media (max-width:900px){
-  .login-nav-link {
-    font-size: 0.875em;
-    text-shadow: 0 1px 6px rgba(0,0,0,0.5);
-    font-weight: 700;
-    letter-spacing: 2px;
-    line-height: 1.375rem;
-  }
+@media (max-width: 900px) {
+	.login-nav-link {
+		font-size: 0.875em;
+		text-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
+		font-weight: 700;
+		letter-spacing: 2px;
+		line-height: 1.375rem;
+	}
 }
 
 .logIn-div {
-  color: #999;
-  font-weight: 600;
-  font-size: 15px;
+	color: #999;
+	font-weight: 600;
+	font-size: 15px;
 }
 
 .nav-link {
-  color: #999;
-  font-weight: 600;
-  font-size: 1rem;
+	color: #999;
+	font-weight: 600;
+	font-size: 1rem;
 }
 
 .nav-link:hover {
-  color: white;
-  cursor: pointer;
+	color: white;
+	cursor: pointer;
 }
 
 .nav-link:focus {
-  border-bottom: 2px solid #0d6efd !important;
-  color: white;
+	border-bottom: 2px solid #0d6efd !important;
+	color: white;
 }
 
 .login-nav-link {
-  color: #999 !important;
-  white-space: nowrap;
+	color: #999 !important;
+	white-space: nowrap;
 }
 .login-nav-link:hover {
-  color: #ccc !important;
+	color: #ccc !important;
 }
 
 .login-nav-link-bars {
-  color: #999 !important;
+	color: #999 !important;
 }
 .button-toggler {
-  background-color: #dee2e6;
+	background-color: #dee2e6;
 }
 
 .logIn-col {
-  color: #343434;
-  right: 0%;
+	color: #343434;
+	right: 0%;
 }
 
-
-.navbar-box {
+/* .navbar-box {
   min-height: 110px;
   margin-block-start: auto !important;
 }
@@ -90,40 +89,39 @@
   .navbar-box {
     min-height: 70px;
   }
-}
+} */
 .navbar-brand-box {
-  position: absolute;
-  right: 50%;
-  transform: translateX(50%);
+	position: absolute;
+	right: 50%;
+	transform: translateX(50%);
 }
 
 .navbar-container-box {
-  width: min(90vw, 1100px) !important;
-  display: grid !important;
-  grid-template-columns: 1fr 2fr 1fr;
+	width: min(90vw, 1100px) !important;
+	display: grid !important;
+	grid-template-columns: 1fr 2fr 1fr;
 }
 
 @media (min-width: 768px) {
-  .navbar-collapse-box {
-    margin-inline-start: auto;
-    grid-row: 1 / 2;
-    grid-column: 3 / 4;
-  }
+	.navbar-collapse-box {
+		margin-inline-start: auto;
+		grid-row: 1 / 2;
+		grid-column: 3 / 4;
+	}
 }
 
 .border-wrapper {
-  margin-inline: auto;
-  width: 100%;
-  border-top: 1px solid #333;
-  border-bottom: 1px solid #333;
+	margin-inline: auto;
+	width: 100%;
+	border-top: 1px solid #333;
+	border-bottom: 1px solid #333;
 }
 
 .border-silver {
-  border-right: 1px solid #333;
-  border-left: 1px solid #333;
+	border-right: 1px solid #333;
+	border-left: 1px solid #333;
 }
 
 /* .navbar-link {
   background-image: url(https://res.cloudinary.com/dn9mr6kwc/image/upload/v1667039687/Starwars%20miniproject/sw_logo_mobile_q66vst.png);
 }  */
-
