--- a/src/components/card-styles.css
+++ b/src/components/card-styles.css
@@ -31,6 +31,20 @@
   flex: auto;
 }
 
+.page-img-container img {
+  height: 72vh;
+  width: 100%;
+  object-fit: cover;
+}
+
+.inner-card-img-wrapper img {
+  width: 100%;
+  height: 100%;
+}
+.page-description-container span.ship-name-separator {
+  display: none;
+}
+
 @media (max-width: 768px) {
   .page-img-container {
     width: 100%;
@@ -43,17 +57,19 @@
   .page-wrapper {
     flex-direction: column;
   }
-}
+  .page-img-container img {
+    height: 43vh;
+    width: 100%;
+    object-fit: cover;
+  }
 
-.page-img-container img {
-  height: 60vh;
-  width: 100%;
-  object-fit: cover;
-}
-
-.inner-card-img-wrapper img {
-  width: 100%;
-  height: 100%;
+  .page-description-container span.ship-name-separator {
+    display: inline-block;
+    padding-inline: 0.3rem;
+  }
+  .page-description-container span {
+    display: inline-block;
+  }
 }
 
 .inner-card-description-container {
