--- a/src/pages/Login/form.css
+++ b/src/pages/Login/form.css
@@ -1,10 +1,16 @@
+.form-layer {
+  position: relative;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 1100px;
+  z-index: 99999999;
+}
 .loginForm-container {
   position: fixed;
-  z-index: 999;
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
   display: none;
   align-items: center;
@@ -13,11 +19,7 @@
 
 .loginForm-container.is-open {
   display: flex;
-}
-
-.loginForm-container.is-open > form {
-  position: absolute;
-  top: 25%;
+  height: 100%;
 }
 
 .form-inner {
@@ -26,26 +28,10 @@
   width: min(540px, 85vw);
   padding: 1rem;
 }
-
-@media (max-width: 576px) {
-  .form-inner {
-    width: 100%;
-    min-height: 100vh;
-  }
-  .loginForm-container form {
-    width: 100%;
-  }
-  .loginForm-container.is-open > form {
-    position: absolute;
-    top: 0%;
-  }
-
-} 
-
 .login-close {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
+  position: relative;
+  top: -2.5rem;
+  right: -10rem;
   border: 0;
   background-color: transparent;
   font-size: 2rem;
@@ -125,4 +111,29 @@ input[type='submit']:hover {
 
 .signup-link-group a:hover {
   text-decoration: underline;
+}
+
+.login-img {
+  width: auto;
+}
+
+@media (max-width: 576px) {
+  .login-close {
+    top: -2.5rem;
+    right: -4.5rem;
+  }
+  .form-inner {
+    width: 100%;
+    min-height: 100vh;
+  }
+  .loginForm-container form {
+    width: 100%;
+    position: absolute;
+    top: 0%;
+  }
+  .loginForm-container {
+    width: 100%;
+    position: absolute;
+    top: 0;
+  }
 }
