--- a/src/pages/Login/form.css
+++ b/src/pages/Login/form.css
@@ -1,16 +1,9 @@
-.form-layer {
-  position: relative;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  height: 1100px;
-  z-index: 99999999;
-}
 .loginForm-container {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   display: none;
   align-items: center;
@@ -19,19 +12,16 @@
 
 .loginForm-container.is-open {
   display: flex;
-  height: 100%;
 }
 
 .form-inner {
   background-color: #181818;
   letter-spacing: 0.06em;
   width: min(540px, 85vw);
-  padding: 1rem;
 }
-.login-close {
-  position: relative;
-  top: -2.5rem;
-  right: -10rem;
+.login-close-btn {
+  /* top: 4vh; */
+  right: 1.5rem;
   border: 0;
   background-color: transparent;
   font-size: 2rem;
@@ -39,7 +29,7 @@
   transition: color 0.1s;
 }
 
-.login-close:hover {
+.login-close-btn:hover {
   color: #3f6dac;
 }
 
@@ -83,7 +73,7 @@ input[type='submit']:hover {
 .sign-up-link {
   width: 90%;
   margin: 0 auto;
-  margin-top: 3.5rem;
+  margin-top: 1rem;
   margin-bottom: 2rem;
   padding: 0.5rem;
   border: 0;
@@ -114,26 +104,22 @@ input[type='submit']:hover {
 }
 
 .login-img {
-  width: auto;
+  width: 200px;
 }
 
 @media (max-width: 576px) {
-  .login-close {
-    top: -2.5rem;
-    right: -4.5rem;
-  }
-  .form-inner {
-    width: 100%;
-    min-height: 100vh;
-  }
-  .loginForm-container form {
-    width: 100%;
-    position: absolute;
-    top: 0%;
-  }
   .loginForm-container {
     width: 100%;
     position: absolute;
     top: 0;
+    min-height: 100vh;
+  }
+  .loginForm-container form {
+    width: 100%;
+    height: 100%;
+  }
+  .form-inner {
+    width: 100%;
+    height: 100%;
   }
 }
