--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  overflow-x: hidden;
+  transition: 0.5s ease-in-out;
 }
 
 .main-wrapper {
