--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -103,6 +103,22 @@
   grid-template-columns: 1fr 2fr 1fr;
 }
 
+.navbar-collapse-box {
+  line-height: 2.5rem;
+}
+
+.search-icon-container {
+  display: flex;
+  justify-content: center;
+  /* padding: 0.5rem 0.8rem; */
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 7.5px;
+}
+
+.search-icon-container button {
+  /* padding: 0.4rem 1rem; */
+}
+
 @media (min-width: 768px) {
   .navbar-collapse-box {
     margin-inline-start: auto;
