--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
   line-height: 1.5;
   overflow-x: hidden;
   transition: 0.5s ease-in-out;
+  padding: 0 !important;
 }
 
 .main-wrapper {
