--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,161 +1,174 @@
 .header {
-  position: relative;
+	position: relative;
 }
 
 .nav-wrapper {
-  width: min(90vw, 1100px);
+	width: min(90vw, 1100px);
 }
 .nav-link,
 .login-nav-link {
-  font-size: 0.8em !important;
-  font-weight: 800 !important;
+	font-size: 0.8em !important;
+	font-weight: 800 !important;
+}
+
+.navbar-toggle-btn.collapsed {
+	border-color: rgba(255, 255, 255, 0.3) !important;
+	background-color: transparent;
 }
 
 .navbar-toggle-btn {
-  border-color: rgba(255, 255, 255, 0.3) !important;
+	background-color: #424649;
 }
 
 .navbar-toggle-btn:focus {
-  box-shadow: 0 0 0 0.1rem;
+	box-shadow: none;
 }
-.search-icon-container button {
-  padding: 6px 14.6px;
-  background-color: transparent;
-  /* border: 1px solid rgba(255, 255, 255, 0.3); */
+
+.search-icon-btn {
+	padding: 6px 14.6px;
+	background-color: transparent;
+	border: 2px solid rgba(255, 255, 255, 0.3);
+}
+
+.search-icon-btn:focus {
+	outline: none;
+}
+.search-icon-btn:focus-visible {
+	background-color: transparent !important;
+	border: 2px solid rgba(255, 255, 255, 0.3);
+	/* color: white; */
 }
 
 @media (max-width: 576px) {
-  .search-icon-container button {
-    padding: 4px 9.6px;
-  }
-  .nav {
-    flex-wrap: nowrap;
-  }
-  .nav-wrapper {
-    width: 100%;
-  }
-  .logo-img {
-    width: 180px;
-  }
-  .navbar-toggle-btn {
-    padding: 0.1rem 0.4rem;
-  }
+	.search-icon-btn {
+		padding: 4.6px 12.4px;
+		border-width: 1px;
+	}
+	.nav {
+		flex-wrap: nowrap;
+	}
+	.nav-wrapper {
+		width: 100%;
+	}
+	.logo-img {
+		width: 180px;
+	}
+	.navbar-toggle-btn {
+		padding: 0.1rem 0.4rem;
+	}
 }
 
 @media (max-width: 900px) {
-  .login-nav-link {
-    font-size: 0.875em;
-    text-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
-    font-weight: 700;
-    letter-spacing: 2px;
-    line-height: 1.375rem;
-  }
+	.login-nav-link {
+		font-size: 0.875em;
+		text-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
+		font-weight: 700;
+		letter-spacing: 2px;
+		line-height: 1.375rem;
+	}
 }
 
 .logIn-div {
-  color: #999;
-  font-weight: 600;
-  font-size: 15px;
+	color: #999;
+	font-weight: 600;
+	font-size: 15px;
 }
 
 .nav-link {
-  color: #999;
-  font-weight: 600;
-  font-size: 1rem;
+	color: #999;
+	font-weight: 600;
+	font-size: 1rem;
 }
 
 .nav-link:hover {
-  color: white;
-  cursor: pointer;
+	color: white;
+	cursor: pointer;
 }
 
 .nav-link:focus {
-  border-bottom: 2px solid #0d6efd !important;
-  color: white;
+	outline: none;
+}
+.nav-link:focus-visible {
+	border-bottom: 2px solid #0d6efd !important;
+	color: white;
 }
 
 .login-nav-link {
-  color: #999 !important;
-  white-space: nowrap;
+	color: #999 !important;
+	white-space: nowrap;
 }
 .login-nav-link:hover {
-  color: #ccc !important;
+	color: #ccc !important;
 }
 
 .login-nav-link-bars {
-  color: #999 !important;
+	color: #999 !important;
 }
 .button-toggler {
-  background-color: #dee2e6;
+	background-color: #dee2e6;
 }
 
 .logIn-col {
-  color: #343434;
-  right: 0%;
+	color: #343434;
+	right: 0%;
 }
 
-@media (min-width: 768px) {
-  .navbar-brand {
-    grid-column: 2 /3;
-  }
-}
-.navbar-brand-box {
-  position: absolute;
-  right: 50%;
-  transform: translateX(50%);
-}
+/* .navbar-brand-box {
+	position: absolute;
+	right: 50%;
+	transform: translateX(50%);
+} */
 
 .navbar-container-box {
-  width: min(90vw, 1100px) !important;
-  display: grid !important;
-  grid-template-columns: 1fr 2fr 1fr;
+	width: min(90vw, 1100px) !important;
+	display: grid !important;
+	grid-template-columns: 1fr 2fr 1fr;
 }
 
 .navbar-collapse-box {
-  line-height: 2.5rem;
+	line-height: 2.5rem;
 }
 
 .search-icon-container {
-  display: flex;
-  justify-content: center;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 0.375rem;
-  overflow: hidden;
+	display: flex;
+	justify-content: center;
+	border-radius: 0.375rem;
+	overflow: hidden;
 }
 
 .search-icon-container button:hover {
-  background-color: #212529 !important;
-  border-color: #212529 !important;
+	background-color: #424649 !important;
+	border-color: rgba(255, 255, 255, 0.3) !important;
 }
 
 @media (min-width: 768px) {
-  .search-icon-container {
-    grid-row: 1 / 2;
-  }
-  .search-icon-container button {
-    margin-right: auto;
-  }
-  /* .search-icon-container:hover {
-    min-width: 100%;
-  } */
-  .navbar-collapse-box {
-    margin-inline-start: auto;
-    grid-row: 1 / 2;
-    grid-column: 3 / 4;
-  }
+	.search-icon-container {
+		grid-row: 1 / 2;
+	}
+	.search-icon-container button {
+		margin-right: auto;
+	}
+	.navbar-collapse-box {
+		margin-inline-start: auto;
+		grid-row: 1 / 2;
+		grid-column: 3 / 4;
+	}
+	.navbar-brand {
+		grid-column: 2 /3;
+	}
 }
 
 .border-wrapper {
-  margin-inline: auto;
-  width: 100%;
-  border-bottom: 1px solid #333;
-  border-top: 1px solid #333;
-  padding: 0.1rem;
+	margin-inline: auto;
+	width: 100%;
+	border-bottom: 1px solid #333;
+	border-top: 1px solid #333;
+	padding: 0.1rem;
 }
 
 .border-silver {
-  border-right: 1px solid #333;
-  border-left: 1px solid #333;
+	border-right: 1px solid #333;
+	border-left: 1px solid #333;
 }
 
 /* .navbar-link {
