--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,116 +1,116 @@
 .header {
-	position: relative;
+  position: relative;
 }
 
 .nav-wrapper {
-	width: min(90vw, 1100px);
+  width: min(90vw, 1100px);
 }
 .nav-link,
 .login-nav-link {
-	font-size: 0.8em !important;
-	font-weight: 800 !important;
+  font-size: 0.8em !important;
+  font-weight: 800 !important;
 }
 
 .navbar-toggle-btn.collapsed {
-	border-color: rgba(255, 255, 255, 0.3) !important;
-	background-color: transparent;
+  border-color: rgba(255, 255, 255, 0.3) !important;
+  background-color: transparent;
 }
 
 .navbar-toggle-btn {
-	background-color: #424649;
+  background-color: #424649;
 }
 
 .navbar-toggle-btn:focus {
-	box-shadow: none;
+  box-shadow: none;
 }
 
 .search-icon-btn {
-	padding: 6px 14.6px;
-	background-color: transparent;
-	border: 2px solid rgba(255, 255, 255, 0.3);
+  padding: 6px 14.6px;
+  background-color: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.3);
 }
 
 .search-icon-btn:focus {
-	outline: none;
+  outline: none;
 }
 .search-icon-btn:focus-visible {
-	background-color: transparent !important;
-	border: 2px solid rgba(255, 255, 255, 0.3);
-	/* color: white; */
+  background-color: transparent !important;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+  /* color: white; */
 }
 
 @media (max-width: 576px) {
-	.search-icon-btn {
-		padding: 4.6px 12.4px;
-		border-width: 1px;
-	}
-	.nav {
-		flex-wrap: nowrap;
-	}
-	.nav-wrapper {
-		width: 100%;
-	}
-	.logo-img {
-		width: 180px;
-	}
-	.navbar-toggle-btn {
-		padding: 0.1rem 0.4rem;
-	}
+  .search-icon-btn {
+    padding: 4.6px 12.4px;
+    border-width: 1px;
+  }
+  .nav {
+    flex-wrap: nowrap;
+  }
+  .nav-wrapper {
+    width: 100%;
+  }
+  .logo-img {
+    width: 180px;
+  }
+  .navbar-toggle-btn {
+    padding: 0.1rem 0.4rem;
+  }
 }
 
 @media (max-width: 900px) {
-	.login-nav-link {
-		font-size: 0.875em;
-		text-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
-		font-weight: 700;
-		letter-spacing: 2px;
-		line-height: 1.375rem;
-	}
+  .login-nav-link {
+    font-size: 0.875em;
+    text-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
+    font-weight: 700;
+    letter-spacing: 2px;
+    line-height: 1.375rem;
+  }
 }
 
 .logIn-div {
-	color: #999;
-	font-weight: 600;
-	font-size: 15px;
+  color: #999;
+  font-weight: 600;
+  font-size: 15px;
 }
 
 .nav-link {
-	color: #999;
-	font-weight: 600;
-	font-size: 1rem;
+  color: #999;
+  font-weight: 600;
+  font-size: 1rem;
 }
 
 .nav-link:hover {
-	color: white;
-	cursor: pointer;
+  color: white;
+  cursor: pointer;
 }
 
 .nav-link:focus {
-	outline: none;
+  outline: none;
 }
 .nav-link:focus-visible {
-	border-bottom: 2px solid #0d6efd !important;
-	color: white;
+  border-bottom: 2px solid #0d6efd !important;
+  color: white;
 }
 
 .login-nav-link {
-	color: #999 !important;
-	white-space: nowrap;
+  color: #999 !important;
+  white-space: nowrap;
 }
 .login-nav-link:hover {
-	color: #ccc !important;
+  color: #ccc !important;
 }
 
 .login-nav-link-bars {
-	color: #999 !important;
+  color: #999 !important;
 }
 .button-toggler {
-	background-color: #dee2e6;
+  background-color: #dee2e6;
 }
 
 .logIn-col {
-	color: #343434;
-	right: 0%;
+  color: #343434;
+  right: 0%;
 }
 
 /* .navbar-brand-box {
@@ -120,55 +120,55 @@
 } */
 
 .navbar-container-box {
-	width: min(90vw, 1100px) !important;
-	display: grid !important;
-	grid-template-columns: 1fr 2fr 1fr;
+  width: min(90vw, 1100px) !important;
+  display: grid !important;
+  grid-template-columns: 1fr 2fr 1fr;
 }
 
 .navbar-collapse-box {
-	line-height: 2.5rem;
+  line-height: 2.5rem;
 }
 
 .search-icon-container {
-	display: flex;
-	justify-content: center;
-	border-radius: 0.375rem;
-	overflow: hidden;
+  display: flex;
+  justify-content: center;
+  border-radius: 0.375rem;
+  overflow: hidden;
 }
 
 .search-icon-container button:hover {
-	background-color: #424649 !important;
-	border-color: rgba(255, 255, 255, 0.3) !important;
+  background-color: #424649 !important;
+  border-color: rgba(255, 255, 255, 0.3) !important;
 }
 
 @media (min-width: 768px) {
-	.search-icon-container {
-		grid-row: 1 / 2;
-	}
-	.search-icon-container button {
-		margin-right: auto;
-	}
-	.navbar-collapse-box {
-		margin-inline-start: auto;
-		grid-row: 1 / 2;
-		grid-column: 3 / 4;
-	}
-	.navbar-brand {
-		grid-column: 2 /3;
-	}
+  .search-icon-container {
+    grid-row: 1 / 2;
+  }
+  .search-icon-container button {
+    margin-right: auto;
+  }
+  .navbar-collapse-box {
+    margin-inline-start: auto;
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+  }
+  .navbar-brand {
+    grid-column: 2 /3;
+  }
 }
 
 .border-wrapper {
-	margin-inline: auto;
-	width: 100%;
-	border-bottom: 1px solid #333;
-	border-top: 1px solid #333;
-	padding: 0.1rem;
+  margin-inline: auto;
+  width: 100%;
+  border-bottom: 1px solid #333;
+  border-top: 1px solid #333;
+  padding: 0.1rem;
 }
 
 .border-silver {
-	border-right: 1px solid #333;
-	border-left: 1px solid #333;
+  border-right: 1px solid #333;
+  border-left: 1px solid #333;
 }
 
 /* .navbar-link {
@@ -176,37 +176,78 @@
 }  */
 
 .modal {
-	backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
 }
 
 .modal-form {
-	background-color: #282a2b;
-	color: #edd700;
+  background-color: #282a2b;
+  color: #edd700;
 }
 
 .modal-backdrop.show {
-	opacity: 0.75;
+  opacity: 0.75;
 }
 .modal-search-btn {
-	display: block;
-	width: 100%;
-	margin: 1.3rem auto;
-	padding: 0.6rem;
-	border: none;
-	border-radius: 5px;
-	font-weight: 500;
-	font-size: 14px;
-	background-color: #484848;
-	color: white;
-	transition: background-color 0.2s;
+  display: block;
+  width: 100%;
+  margin: 1.3rem auto;
+  padding: 0.6rem;
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
+  font-size: 14px;
+  background-color: #484848;
+  color: white;
+  transition: background-color 0.2s;
+}
+.modal-search-btn:hover {
+  background-color: #3f6dac !important;
 }
 
 input[name='searchInput'] {
-	font-size: 12px;
-	width: 100%;
-	padding: 0.7rem;
-	border-radius: 5px;
-	border: none;
-	outline: none;
-	margin: auto;
+  font-size: 12px;
+  width: 100%;
+  padding: 0.7rem;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  margin: auto;
+}
+
+input[name='searchInput']:focus-visible {
+  border: 2px solid #edd700;
+  background-color: #484848;
+  color: #edd700;
+  outline: none;
+  box-shadow: none;
+}
+
+.custom-modal-title {
+  color: #edd700;
+  font-size: 1.5rem;
+  margin-top: 0;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.modal-body label {
+  font-size: 0.8rem;
+}
+
+.form-check-inline {
+  margin-right: 0.3rem;
+}
+.form-label:not(:first-child) {
+  margin-left: 0.8rem;
+}
+
+@media (max-width: 576px) {
+  .form-label:not(:first-child) {
+    margin-left: 0.5rem;
+  }
+}
+
+.modal-header .btn-close {
+  /* color: white !important; */
+  opacity: 1;
 }
