--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -91,11 +91,12 @@
 
 .nav-link:focus {
   outline: none;
-}
-.nav-link:focus-visible {
-  border-bottom: 2px solid #0d6efd !important;
   color: white;
 }
+/* .nav-link:focus-visible {
+  border-bottom: 2px solid #0d6efd !important;
+  color: white;
+} */
 
 .login-nav-link {
   color: #999 !important;
@@ -257,11 +258,11 @@ input[name='searchInput']:focus-visible {
 }
 
 .light-saber {
-  /* position: absolute; */
-  /* bottom: 13%; */
+  position: absolute;
+  bottom: 10%;
   border-radius: 10px;
-  /* left: 40%; */
-  width: 35px;
+  left: 44%;
+  width: 12%;
   height: 2px;
   box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
     0 0 100px #03e9f4;
