--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,6 +15,12 @@
   font-weight: 800 !important;
 }
 
+@media (max-width: 576px) {
+  .nav-link {
+    padding-inline: 0.5rem;
+  }
+}
+
 .navbar-toggle-btn.collapsed {
   border-color: rgba(255, 255, 255, 0.3) !important;
   background-color: transparent;
