--- a/src/components/LandingAnimation/LandingAnimation.scss
+++ b/src/components/LandingAnimation/LandingAnimation.scss
@@ -79,26 +79,26 @@
 }
 
 /* Make the 3D work on the container */
+
 .starwars-demo {
   perspective: 800px;
   transform-style: preserve3d;
-}
 
-.starwars-demo {
-  height: 17em;
+  height: 28vh;
   left: 50%;
   position: absolute;
-  top: 53%;
+  top: 45%;
   transform: translate(-50%, -50%);
-  width: 34em;
-}
+  width: 48vw;
 
-.byline span {
-  display: inline-block;
-}
-
-img {
-  width: 100%;
+  img {
+    width: 100%;
+  }
+  .byline {
+    span {
+      display: inline-block;
+    }
+  }
 }
 
 .star,
@@ -117,8 +117,7 @@ img {
 
 .byline {
   color: #fff;
-  /* font-family: 'ITC Serif Gothic', Lato; */
-  font-size: 2.25em;
+  font-size: 1rem;
   left: -2em;
   letter-spacing: 0.4em;
   right: -2em;
@@ -129,14 +128,114 @@ img {
 
 /*** Media queries for adjusting to different screen sizes ***/
 
-@media only screen and (max-width: 600px) {
+@media (width > 1440px) {
   .starwars-demo {
-    font-size: 10px;
+    top: 50%;
+    height: 11rem;
+    width: 24rem;
+    h2 {
+      font-size: 1.25rem;
+    }
+    .byline {
+      top: 115%;
+    }
   }
 }
 
-@media only screen and (max-width: 480px) {
+@media (width < 1440px) {
   .starwars-demo {
-    font-size: 7px;
+    top: 50%;
+    height: 10.3rem;
+    width: 22rem;
+    h2 {
+      font-size: 1.10rem;
+    }
+    .byline {
+      top: 125%;
+    }
+  }
+}
+
+@media (width < 900px) {
+  .starwars-demo {
+    top: 55%;
+  }
+}
+
+
+@media (width < 800px) {
+  .starwars-demo {
+    top: 50%;
+    height: 9.75rem;
+    width: 21rem;
+  }
+}
+
+@media (width < 700px) {
+  .starwars-demo {
+    height: 8.75rem;
+    width: 19rem;
+    h2 {
+      font-size: 1.05rem;
+    }
+  }
+}
+
+@media (width < 600px) {
+  .starwars-demo {
+    height: 8rem;
+    width: 17.5rem;
+    h2 {
+      font-size: 1rem;
+    }
+  }
+}
+
+@media (width < 900px) and (orientation: landscape) {
+  .starwars-demo {
+    top: 70%;
+    height: 4rem;
+    width: 10rem;
+  }
+  h2 {
+    font-size: 0.6rem !important;
+  }
+  .byline {
+    top: 150%;
+  }
+}
+
+@media (width < 500px) and (orientation: portrait) {
+  .starwars-demo {
+    top: 45%;
+    height: 7.5rem;
+    width: 16.5rem;
+  }
+}
+
+
+@media (width < 400px) {
+  .starwars-demo {
+    height: 5.5rem;
+    width: 13rem;
+    h2 {
+      font-size: 0.75rem;
+    }
+    .byline {
+      top: 135%;
+    }
+  }
+}
+
+@media (width < 350px) {
+  .starwars-demo {
+    height: 3.5rem;
+    width: 8.5rem;
+    h2 {
+      font-size: 0.60rem;
+    }
+    .byline {
+      top: 150%;
+    }
   }
 }
