--- a/src/pages/Login/form.scss
+++ b/src/pages/Login/form.scss
@@ -113,11 +113,12 @@ input[type="submit"]:hover {
 }
 
 @media (max-width: 576px) {
-  .loginForm-container {
+  .loginForm-container {  
     width: 100%;
     position: absolute;
     top: 0;
-    min-height: 100vh;
+    //avoid mobile keyword partially hiding the form
+    min-height: max(700px, 100vh);
   }
   .loginForm-container form {
     width: 100%;
@@ -125,6 +126,6 @@ input[type="submit"]:hover {
   }
   .form-inner {
     width: 100%;
-    // height: 100%;
+    height: 100%;
   }
 }
