--- a/src/pages/Login/form.scss
+++ b/src/pages/Login/form.scss
@@ -1,131 +1,131 @@
 .loginForm-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: none;
-  align-items: center;
-  justify-content: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.7);
+	display: none;
+	align-items: center;
+	justify-content: center;
 }
 
 .loginForm-container.is-open {
-  display: flex;
+	display: flex;
 }
 
 .signup-link-group {
-  flex-grow: 1;
+	flex-grow: 1;
 }
 
 .form-inner {
-  background-color: #181818;
-  letter-spacing: 0.06em;
-  width: min(540px, 85vw);
+	background-color: #181818;
+	letter-spacing: 0.06em;
+	width: calc(min(540px, 85vw));
 }
 .login-close-btn {
-  /* top: 4vh; */
-  right: 1.5rem;
-  border: 0;
-  background-color: transparent;
-  font-size: 2rem;
-  color: white;
-  transition: color 0.1s;
+	/* top: 4vh; */
+	right: 1.5rem;
+	border: 0;
+	background-color: transparent;
+	font-size: 2rem;
+	color: white;
+	transition: color 0.1s;
 }
 
 .login-close-btn:hover {
-  color: #3f6dac;
+	color: #3f6dac;
 }
 
 .log-in-title {
-  color: #edd700;
-  font-size: 1.5rem;
+	color: #edd700;
+	font-size: 1.5rem;
 }
 
 .form-group input {
-  font-size: 12px;
-  width: 90%;
-  padding: 0.7rem;
-  border-radius: 5px;
-  border: none;
-  outline: none;
+	font-size: 12px;
+	width: 90%;
+	padding: 0.7rem;
+	border-radius: 5px;
+	border: none;
+	outline: none;
 }
 
 .form-group > input:focus-visible {
-  border: 2px solid #edd700;
-  background-color: #484848;
-  color: #edd700;
+	border: 2px solid #edd700;
+	background-color: #484848;
+	color: #edd700;
 }
-input[type="submit"] {
-  display: block;
-  width: 90%;
-  margin: 1.3rem auto;
-  padding: 0.6rem;
-  border: none;
-  border-radius: 5px;
-  font-weight: 500;
-  font-size: 14px;
-  background-color: #484848;
-  color: white;
-  transition: background-color 0.2s;
+input[type='submit'] {
+	display: block;
+	width: 90%;
+	margin: 1.3rem auto;
+	padding: 0.6rem;
+	border: none;
+	border-radius: 5px;
+	font-weight: 500;
+	font-size: 14px;
+	background-color: #484848;
+	color: white;
+	transition: background-color 0.2s;
 }
 
-input[type="submit"]:hover {
-  background-color: #3f6dac;
+input[type='submit']:hover {
+	background-color: #3f6dac;
 }
 
 .sign-up-link {
-  width: 90%;
-  height: 100%;
-  margin: 0 auto;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  padding: 0.5rem;
-  border: 0;
-  border-radius: 5px;
-  transition: border 350ms;
+	width: 90%;
+	height: 100%;
+	margin: 0 auto;
+	margin-top: 1rem;
+	margin-bottom: 2rem;
+	padding: 0.5rem;
+	border: 0;
+	border-radius: 5px;
+	transition: border 350ms;
 }
 
 .sign-up-link:hover {
-  border: solid 1px #edd700;
+	border: solid 1px #edd700;
 }
 
 .sign-up-link a {
-  display: block;
-  width: 100%;
-  color: #edd700;
+	display: block;
+	width: 100%;
+	color: #edd700;
 }
 
 .signup-link-group p {
-  font-size: 13px;
+	font-size: 13px;
 }
 .signup-link-group a {
-  font-size: 13px;
-  color: #edd700;
+	font-size: 13px;
+	color: #edd700;
 }
 
 .signup-link-group a:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 .login-img {
-  width: 200px;
+	width: 200px;
 }
 
 @media (max-width: 576px) {
-  .loginForm-container {  
-    width: 100%;
-    position: absolute;
-    top: 0;
-    //avoid mobile keyword partially hiding the form
-    min-height: max(700px, 100vh);
-  }
-  .loginForm-container form {
-    width: 100%;
-    height: 100%;
-  }
-  .form-inner {
-    width: 100%;
-    height: 100%;
-  }
+	.loginForm-container {
+		width: 100%;
+		position: absolute;
+		top: 0;
+		//avoid mobile keyword partially hiding the form
+		min-height: calc(max(700px, 100vh));
+	}
+	.loginForm-container form {
+		width: 100%;
+		height: 100%;
+	}
+	.form-inner {
+		width: 100%;
+		height: 100%;
+	}
 }
