--- a/src/base.scss
+++ b/src/base.scss
@@ -15,6 +15,9 @@ body {
 	text-rendering: optimizeSpeed;
 	line-height: 1.5;
 }
+// .app {
+// 	min-height: 100%;
+// }
 
 a {
 	text-decoration: none;
